# planet

./: CMakeLists.txt
data/: basic.vert  data
src/: .main.c.swp  main.c  maths.c  maths.h  mesh.c  mesh.h  window.c  window.h
tests/: math_tests.cpp
