project(planet)

cmake_minimum_required(VERSION 2.8)

set(SOURCES
  src/main.c
  src/window.c
)

add_executable(${PROJECT_NAME} ${SOURCES})

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(GL REQUIRED gl)
PKG_SEARCH_MODULE(GLEW REQUIRED glew)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${GL_LIBRARIES} ${GLEW_LIBRARIES})

add_custom_command(
  TARGET ${PROJECT_NAME} POST_BUILD
  COMMAND ln -sf ${CMAKE_SOURCE_DIR}/data ${CMAKE_BINARY_DIR}/data
  )
